# asr_sdm_ws

src/asr_sdm_universe/control/asr_sdm_controller/: CMakeLists.txt  HEAD_TRACKING_CONTROL_GUIDE.md  README.md  SCRIPTS_README.md  package.xml  start_horizontal_visualization.sh  test_controller_node.py  verify_head_tracking_rviz.py
src/asr_sdm_universe/control/asr_sdm_controller/include/asr_sdm_controller/: front_unit_following_controller.hpp  pinocchio_kinematics_wrapper.hpp
src/asr_sdm_universe/control/asr_sdm_controller/src/: CMakeLists.txt  asr_sdm_controller_node.cpp  front_unit_following_controller.cpp  pinocchio_kinematics_wrapper.cpp  test_front_unit_following_controller.cpp
src/asr_sdm_universe/robot/asr_sdm_description/: CMakeLists.txt
src/asr_sdm_universe/robot/asr_sdm_description/launch/: crazyflie.rviz  head_tracking_no_gui.launch.py  horizontal_snake_visualization.launch.py  underwater_snakerobot_rviz.launch.py
src/asr_sdm_universe/robot/asr_sdm_description/rviz/: head_tracking.rviz  horizontal_snake.rviz
src/asr_sdm_universe/robot/asr_sdm_description/urdf/: horizontal_snakerobot.urdf.xacro  underwater_snakerobot.urdf  underwater_snakerobot.urdf.xacro
